refactored piecedata to absorb CustomMovements into Movements and Captures instead of being its own category #028